Fix: Fixed gap on open modal login

--- a/Frontend/pawcients-front/src/css/global/forms.css
+++ b/Frontend/pawcients-front/src/css/global/forms.css
@@ -5,9 +5,6 @@
   height: 100vh;
   background-color: var(--background-page);
 }
-.management {
-  margin: 0px !important;
-}
 
 .brand-container {
   display: flex;
@@ -21,12 +18,6 @@
 .brand-container img {
   max-width: 100%;
 }
-
-select {
-  font-size: 14px;
-  line-height: 2;
-}
-
 
 .main-container {
   display: flex;
