--- a/Frontend/pawcients-front/src/css/vet/dataManagement.scss
+++ b/Frontend/pawcients-front/src/css/vet/dataManagement.scss
@@ -1,6 +1,9 @@
 .management {
   margin: 20px;
 }
+.managementpage {
+  margin: 0px;
+}
 
 .management-header {
   display: flex;
